# exafmm-rd

./: README.md
3d/: CMakeLists.txt
3d/include/: argument.h  body.h  cell.h  fmm.h  kernel.h  mathfunc.h  surface.h  traverser.h  tree.h  type.h
3d/src/: CMakeLists.txt  body.cpp  fmm.cpp  kernel.cpp  mathfunc.cpp  surface.cpp  traverser.cpp  tree.cpp
3d/test/: CMakeLists.txt  test_cell.cpp  test_fmm.cpp  test_lapack.cpp  test_p2m.cpp  test_p2m2l2p.cpp  test_p2p.cpp  test_svd.cpp
3dirpp/: CMakeLists.txt  README.md
3dirpp/include/: argument.h  body.h  kernel.h  mathfunc.h  traverser.h  tree.h  type.h
3dirpp/src/: CMakeLists.txt  argument.cpp  body.cpp  kernel.cpp  traverser.cpp  tree.cpp
3dirpp/test/: CMakeLists.txt  test_kernel.cpp  test_p2p.cpp  test_traverser.cpp  test_tree.cpp
3dp/: CMakeLists.txt
3dp/include/: argument.h  body.h  ewald.h  fmm.h  kernel.h  mathfunc.h  traverser.h  tree.h  type.h
3dp/src/: CMakeLists.txt  argument.cpp  body.cpp  ewald.cpp  fmm.cpp  kernel.cpp  mathfunc.cpp  surface.cpp  traverser.cpp  tree.cpp
3dp/test/: CMakeLists.txt  test_fmm.cpp  test_pbc.cpp  test_svd.cpp
3dpp/: CMakeLists.txt  README.md
3dpp/data/: plot.py  plot_P_i.py  plot_step.py  slurm-145897.out  slurm-146173.out  slurm-146194.out  slurm-146422.out  slurm-146453.out  slurm-147762.out  slurm-147763.out  slurm-147766.out  slurm-147776.out  slurm-148810.out  slurm-149361.out  slurm-149364.out  slurm-150229.out  slurm-152671.out  slurm-152680.out  slurm-152683.out  test_P.sh  test_i.sh  test_pbc_single.sh
3dpp/exp/: exp_plot_fmms.py  fmmdata.py  plot_step.py  results1.txt  results3.txt  slurm-149348.out  slurm-152673.out  slurm-152675.out  slurm-152676.out  slurm-153052.out  slurm-153057.out  slurm-153068.out  slurm-153078.out  slurm-153079.out  slurm-153084.out  test_i.sh  test_pbc_single.sh
3dpp/include/: align.h  argument.h  body.h  c2c.h  fmm.h  kernel.h  mathfunc.h  surface.h  traverser.h  tree.h  type.h
3dpp/src/: argument.cpp  body.cpp  fmm.cpp  kernel.cpp  mathfunc.cpp  surface.cpp  traverser.cpp  tree.cpp
3dpp/test/: CMakeLists.txt  test_blas.cpp  test_fft.cpp  test_fftw.cpp  test_fmm.cpp  test_pbc.cpp  test_simd.cpp  test_surface.cpp
3drpp/: CMakeLists.txt
3drpp/include/: argument.h  fmm.h  kernel.h  mathfunc.h  traverser.h  tree.h
3drpp/src/: argument.cpp  ewald.cpp  fmm.cpp  kernel.cpp  traverser.cpp  tree.cpp
3drpp/test/: CMakeLists.txt  README.md  test_fmm.cpp  test_reg.cpp
3drpp2/exp/: fmm_draw.py  plot.py  results4.txt  slurm-150229.out  slurm-152672.out  slurm-152677.out  slurm-153048.out  slurm-153055.out  slurm-153061.out  slurm-153076.out  slurm-153080.out  slurm-153082.out
3drpp2/include/: argument.h  body.h  ewald.h  fmm.h  kernel.h  traverser.h  tree.h  type.h
3drpp2/src/: argument.cpp  ewald.cpp  fmm.cpp  kernel.cpp  traverser.cpp  tree.cpp
3drpp2/test/: CMakeLists.txt  test_fftw2.cpp  test_fmm.cpp  test_p2m2m2l2p.cpp  test_pbc.cpp  test_reg.cpp
3drpp_appx/: .gitignore  CMakeLists.txt  README.md  plot_reg.py  reg_check.md  test.sh
3drpp_appx/exp/: fmmdata.py  plot_single_P.py  results2.txt  slurm-148813.out  slurm-152667.out  slurm-152682.out  slurm-152683.out  slurm-153054.out  slurm-153081.out  slurm-153085.out  slurm-153086.out  test_P.sh
3drpp_appx/gtest/: CMakeLists.txt  plot.py  plot_compare.py  plot_reg_l2e.py  test_fmm.cpp
3drpp_appx/include/: argument.h  direct.h  ewald.h  fmm.h  kernel.h  surface.h  traverser.h  tree.h  type.h
3drpp_appx/script/: l2.py  n=24000_image=0_reg=0.05.txt  n=24000_image=0_reg=0.05_seed=12345.txt  n=24000_image=1_reg=0.05.txt  n=24000_image=1_reg=0.05_seed=12345.txt  n=24000_image=2_reg=0.05.txt
3drpp_appx/src/: CMakeLists.txt  Makefile  argument.cpp  body.cpp  cmake_install.cmake  ewald.cpp  fmm.cpp  kernel.cpp  traverser.cpp  tree.cpp
3drpp_appx/src/direct/: fmm.cpp  fmm.h  fmmdirectinteractionstree.cpp  fmmdirectinteractionstree.h  fmmtree.cpp  fmmtree.h  fmmtypes.h  fmmweight_evaluator.h
3drpp_appx/test/: CMakeLists.txt  Makefile  cmake_install.cmake  test_body.cpp  test_fft2.cpp  test_fftw.cpp  test_fmm.cpp  test_matmul.cpp  test_p2m2l2p.cpp  test_pbc.cpp  test_reg.cpp  test_simd.cpp  test_up.cpp
3drpp_ewald/: .gitignore  CMakeLists.txt  README.md
3drpp_ewald/include/: argument.h  body.h  direct.h  epkifmm.h  ewald.h  fmm.h  kernel.h  mathfunc.h  reg.h  timer.h  tree.h  type.h
3drpp_ewald/script/: build.sh  run.py  runfmm.py
3drpp_ewald/src/: CMakeLists.txt  argument.cpp  body.cpp  epkifmm.cpp  ewald.cpp  fmm.cpp  kernel.cpp  traverser.cpp  tree.cpp
3drpp_ewald/test/: CMakeLists.txt  test_ef.cpp  test_efkernel.cpp  test_fmm.cpp  test_pbc.cpp  test_reg.cpp
plot/: results4.txt
